sort.basic.gnome.AlgGnomeSort.scala.error
Compilation error:
AlgGnomeSort:6: error: reassignment to val
      echange(i,i+1);i=i+1
                      ^